Fixed some another FB issues.